--- a/1/need2g0/90448-maddy-and-kirsten-part-one/rus.textile
+++ b/1/need2g0/90448-maddy-and-kirsten-part-one/rus.textile
@@ -1,98 +1,98 @@
-Мэдди и Кирстен, часть первая
+РњСЌРґРґРё Рё РљРёСЂСЃС‚РµРЅ, С‡Р°СЃС‚СЊ РїРµСЂРІР°СЏ
 
-Автор: **
+РђРІС‚РѕСЂ: need2g0
 
 *000*2023-06-28 04:30
 
-Кирстен всегда ревновала к своей сводной сестре Мэдди. Сегодня она собирается отомстить. Или Кирстен становится мастером мочевого пузыря своей «золотой» сестры.
+РљРёСЂСЃС‚РµРЅ РІСЃРµРіРґР° СЂРµРІРЅРѕРІР°Р»Р° Рє СЃРІРѕРµР№ СЃРІРѕРґРЅРѕР№ СЃРµСЃС‚СЂРµ РњСЌРґРґРё. РЎРµРіРѕРґРЅСЏ РѕРЅР° СЃРѕР±РёСЂР°РµС‚СЃСЏ РѕС‚РѕРјСЃС‚РёС‚СЊ. РР»Рё РљРёСЂСЃС‚РµРЅ СЃС‚Р°РЅРѕРІРёС‚СЃСЏ РјР°СЃС‚РµСЂРѕРј РјРѕС‡РµРІРѕРіРѕ РїСѓР·С‹СЂСЏ СЃРІРѕРµР№ В«Р·РѕР»РѕС‚РѕР№В» СЃРµСЃС‚СЂС‹.
 
-«Давай, Мэдди! Впусти меня!» — умоляла Кирстен из-за двери в*нной. Она трясла ручку одной рукой, а другую засунула между бёдер, ноги дрожали от усилия, которое потребовалось, чтобы удержать пульсирующий мочевой пузырь. Маленькие струйки уже начали капать на её нежно-розовое бельё, и она тихонько заскулила, надеясь, что сестра не услышит.
+В«Р”Р°РІР°Р№, РњСЌРґРґРё! Р’РїСѓСЃС‚Рё РјРµРЅСЏ!В» вЂ” СѓРјРѕР»СЏР»Р° РљРёСЂСЃС‚РµРЅ РёР·-Р·Р° РґРІРµСЂРё РІ*РЅРЅРѕР№. РћРЅР° С‚СЂСЏСЃР»Р° СЂСѓС‡РєСѓ РѕРґРЅРѕР№ СЂСѓРєРѕР№, Р° РґСЂСѓРіСѓСЋ Р·Р°СЃСѓРЅСѓР»Р° РјРµР¶РґСѓ Р±С‘РґРµСЂ, РЅРѕРіРё РґСЂРѕР¶Р°Р»Рё РѕС‚ СѓСЃРёР»РёСЏ, РєРѕС‚РѕСЂРѕРµ РїРѕС‚СЂРµР±РѕРІР°Р»РѕСЃСЊ, С‡С‚РѕР±С‹ СѓРґРµСЂР¶Р°С‚СЊ РїСѓР»СЊСЃРёСЂСѓСЋС‰РёР№ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ. РњР°Р»РµРЅСЊРєРёРµ СЃС‚СЂСѓР№РєРё СѓР¶Рµ РЅР°С‡Р°Р»Рё РєР°РїР°С‚СЊ РЅР° РµС‘ РЅРµР¶РЅРѕ-СЂРѕР·РѕРІРѕРµ Р±РµР»СЊС‘, Рё РѕРЅР° С‚РёС…РѕРЅСЊРєРѕ Р·Р°СЃРєСѓР»РёР»Р°, РЅР°РґРµСЏСЃСЊ, С‡С‚Рѕ СЃРµСЃС‚СЂР° РЅРµ СѓСЃР»С‹С€РёС‚.
 
-— Я ненадолго, — позвала Мэдди.
+вЂ” РЇ РЅРµРЅР°РґРѕР»РіРѕ, вЂ” РїРѕР·РІР°Р»Р° РњСЌРґРґРё.
 
-Это всегда случалось. Мэдди, миниатюрная блондинка из группы поддержки, была самой популярной девочкой в их школе, и каждые выходные она часами готовилась к вечеринкам. В доме была только одна в*нная комната, так что Кирстен всегда не хватало места. Кирстен снова постучала, прежде чем её заставили согнуться пополам и засунуть обе руки под юбку. Какое-то время она боролась, пытаясь ухватиться как можно лучше, чтобы не испачкать пол. Кирстен застонала слишком громко и услышала, как Мэдди хихикнула.
+Р­С‚Рѕ РІСЃРµРіРґР° СЃР»СѓС‡Р°Р»РѕСЃСЊ. РњСЌРґРґРё, РјРёРЅРёР°С‚СЋСЂРЅР°СЏ Р±Р»РѕРЅРґРёРЅРєР° РёР· РіСЂСѓРїРїС‹ РїРѕРґРґРµСЂР¶РєРё, Р±С‹Р»Р° СЃР°РјРѕР№ РїРѕРїСѓР»СЏСЂРЅРѕР№ РґРµРІРѕС‡РєРѕР№ РІ РёС… С€РєРѕР»Рµ, Рё РєР°Р¶РґС‹Рµ РІС‹С…РѕРґРЅС‹Рµ РѕРЅР° С‡Р°СЃР°РјРё РіРѕС‚РѕРІРёР»Р°СЃСЊ Рє РІРµС‡РµСЂРёРЅРєР°Рј. Р’ РґРѕРјРµ Р±С‹Р»Р° С‚РѕР»СЊРєРѕ РѕРґРЅР° РІ*РЅРЅР°СЏ РєРѕРјРЅР°С‚Р°, С‚Р°Рє С‡С‚Рѕ РљРёСЂСЃС‚РµРЅ РІСЃРµРіРґР° РЅРµ С…РІР°С‚Р°Р»Рѕ РјРµСЃС‚Р°. РљРёСЂСЃС‚РµРЅ СЃРЅРѕРІР° РїРѕСЃС‚СѓС‡Р°Р»Р°, РїСЂРµР¶РґРµ С‡РµРј РµС‘ Р·Р°СЃС‚Р°РІРёР»Рё СЃРѕРіРЅСѓС‚СЊСЃСЏ РїРѕРїРѕР»Р°Рј Рё Р·Р°СЃСѓРЅСѓС‚СЊ РѕР±Рµ СЂСѓРєРё РїРѕРґ СЋР±РєСѓ. РљР°РєРѕРµ-С‚Рѕ РІСЂРµРјСЏ РѕРЅР° Р±РѕСЂРѕР»Р°СЃСЊ, РїС‹С‚Р°СЏСЃСЊ СѓС…РІР°С‚РёС‚СЊСЃСЏ РєР°Рє РјРѕР¶РЅРѕ Р»СѓС‡С€Рµ, С‡С‚РѕР±С‹ РЅРµ РёСЃРїР°С‡РєР°С‚СЊ РїРѕР». РљРёСЂСЃС‚РµРЅ Р·Р°СЃС‚РѕРЅР°Р»Р° СЃР»РёС€РєРѕРј РіСЂРѕРјРєРѕ Рё СѓСЃР»С‹С€Р°Р»Р°, РєР°Рє РњСЌРґРґРё С…РёС…РёРєРЅСѓР»Р°.
 
-— Как тебе это нравится, детка? — дразнила Мэдди, открывая кран на полную мощность и нанося макияж.
+вЂ” РљР°Рє С‚РµР±Рµ СЌС‚Рѕ РЅСЂР°РІРёС‚СЃСЏ, РґРµС‚РєР°? вЂ” РґСЂР°Р·РЅРёР»Р° РњСЌРґРґРё, РѕС‚РєСЂС‹РІР°СЏ РєСЂР°РЅ РЅР° РїРѕР»РЅСѓСЋ РјРѕС‰РЅРѕСЃС‚СЊ Рё РЅР°РЅРѕСЃСЏ РјР°РєРёСЏР¶.
 
-«Дерьмо!» Голос Кирстен сорвался, и её глаза закатились. Тёплый дух наполнил её руки.
+В«Р”РµСЂСЊРјРѕ!В» Р“РѕР»РѕСЃ РљРёСЂСЃС‚РµРЅ СЃРѕСЂРІР°Р»СЃСЏ, Рё РµС‘ РіР»Р°Р·Р° Р·Р°РєР°С‚РёР»РёСЃСЊ. РўС‘РїР»С‹Р№ РґСѓС… РЅР°РїРѕР»РЅРёР» РµС‘ СЂСѓРєРё.
 
-«Мэдди, пожалуйста! Я умоляю тебя».
+В«РњСЌРґРґРё, РїРѕР¶Р°Р»СѓР№СЃС‚Р°! РЇ СѓРјРѕР»СЏСЋ С‚РµР±СЏВ».
 
-Мэдди только продолжала тянуть время. На ней было тонкое белое бикини, которое подчёркивало загар, полученный ею во время недавнего отпуска на пляже (который был подарком её родителей на день рождения, за исключением Кирстен), и делало её грудь выпуклой. Она носила узкую красную юбку в качестве прикрытия и сочетала её с красными каблуками. Она услышала, как Кирстен хмыкнула с другой стороны двери, и хихикнула. Она решила потратить дополнительные пять минут, чтобы сделать селфи и отправить своему парню.
+РњСЌРґРґРё С‚РѕР»СЊРєРѕ РїСЂРѕРґРѕР»Р¶Р°Р»Р° С‚СЏРЅСѓС‚СЊ РІСЂРµРјСЏ. РќР° РЅРµР№ Р±С‹Р»Рѕ С‚РѕРЅРєРѕРµ Р±РµР»РѕРµ Р±РёРєРёРЅРё, РєРѕС‚РѕСЂРѕРµ РїРѕРґС‡С‘СЂРєРёРІР°Р»Рѕ Р·Р°РіР°СЂ, РїРѕР»СѓС‡РµРЅРЅС‹Р№ РµСЋ РІРѕ РІСЂРµРјСЏ РЅРµРґР°РІРЅРµРіРѕ РѕС‚РїСѓСЃРєР° РЅР° РїР»СЏР¶Рµ (РєРѕС‚РѕСЂС‹Р№ Р±С‹Р» РїРѕРґР°СЂРєРѕРј РµС‘ СЂРѕРґРёС‚РµР»РµР№ РЅР° РґРµРЅСЊ СЂРѕР¶РґРµРЅРёСЏ, Р·Р° РёСЃРєР»СЋС‡РµРЅРёРµРј РљРёСЂСЃС‚РµРЅ), Рё РґРµР»Р°Р»Рѕ РµС‘ РіСЂСѓРґСЊ РІС‹РїСѓРєР»РѕР№. РћРЅР° РЅРѕСЃРёР»Р° СѓР·РєСѓСЋ РєСЂР°СЃРЅСѓСЋ СЋР±РєСѓ РІ РєР°С‡РµСЃС‚РІРµ РїСЂРёРєСЂС‹С‚РёСЏ Рё СЃРѕС‡РµС‚Р°Р»Р° РµС‘ СЃ РєСЂР°СЃРЅС‹РјРё РєР°Р±Р»СѓРєР°РјРё. РћРЅР° СѓСЃР»С‹С€Р°Р»Р°, РєР°Рє РљРёСЂСЃС‚РµРЅ С…РјС‹РєРЅСѓР»Р° СЃ РґСЂСѓРіРѕР№ СЃС‚РѕСЂРѕРЅС‹ РґРІРµСЂРё, Рё С…РёС…РёРєРЅСѓР»Р°. РћРЅР° СЂРµС€РёР»Р° РїРѕС‚СЂР°С‚РёС‚СЊ РґРѕРїРѕР»РЅРёС‚РµР»СЊРЅС‹Рµ РїСЏС‚СЊ РјРёРЅСѓС‚, С‡С‚РѕР±С‹ СЃРґРµР»Р°С‚СЊ СЃРµР»С„Рё Рё РѕС‚РїСЂР°РІРёС‚СЊ СЃРІРѕРµРјСѓ РїР°СЂРЅСЋ.
 
-Мэдди не собиралась выходить сегодня вечером, но её родителей не было дома, поэтому она подумала, что ей это сойдёт с рук, и, возможно, немного повеселится с Кирстен, прежде чем она уйдёт, так как никто не мог помешать ей быть жестокий.
+РњСЌРґРґРё РЅРµ СЃРѕР±РёСЂР°Р»Р°СЃСЊ РІС‹С…РѕРґРёС‚СЊ СЃРµРіРѕРґРЅСЏ РІРµС‡РµСЂРѕРј, РЅРѕ РµС‘ СЂРѕРґРёС‚РµР»РµР№ РЅРµ Р±С‹Р»Рѕ РґРѕРјР°, РїРѕСЌС‚РѕРјСѓ РѕРЅР° РїРѕРґСѓРјР°Р»Р°, С‡С‚Рѕ РµР№ СЌС‚Рѕ СЃРѕР№РґС‘С‚ СЃ СЂСѓРє, Рё, РІРѕР·РјРѕР¶РЅРѕ, РЅРµРјРЅРѕРіРѕ РїРѕРІРµСЃРµР»РёС‚СЃСЏ СЃ РљРёСЂСЃС‚РµРЅ, РїСЂРµР¶РґРµ С‡РµРј РѕРЅР° СѓР№РґС‘С‚, С‚Р°Рє РєР°Рє РЅРёРєС‚Рѕ РЅРµ РјРѕРі РїРѕРјРµС€Р°С‚СЊ РµР№ Р±С‹С‚СЊ Р¶РµСЃС‚РѕРєРёР№.
 
-«О Боже! О Боже! Пожалуйста, Мэдди! Я сделаю всё!» Она услышала звонок Кирстен.
+В«Рћ Р‘РѕР¶Рµ! Рћ Р‘РѕР¶Рµ! РџРѕР¶Р°Р»СѓР№СЃС‚Р°, РњСЌРґРґРё! РЇ СЃРґРµР»Р°СЋ РІСЃС‘!В» РћРЅР° СѓСЃР»С‹С€Р°Р»Р° Р·РІРѕРЅРѕРє РљРёСЂСЃС‚РµРЅ.
 
-Мэдди сняла на видео себя. Сначала она повернулась, чтобы камера запечатлела её упругую попу, затем наклонилась вперёд и свела плечи вместе, чтобы подчеркнуть грудь. Она медленно открыла дверь и направила камеру на Кирстен. Её лицо было красным, и она была почти в слезах, согнувшись пополам на полу и отчаянно хватаясь за себя.
+РњСЌРґРґРё СЃРЅСЏР»Р° РЅР° РІРёРґРµРѕ СЃРµР±СЏ. РЎРЅР°С‡Р°Р»Р° РѕРЅР° РїРѕРІРµСЂРЅСѓР»Р°СЃСЊ, С‡С‚РѕР±С‹ РєР°РјРµСЂР° Р·Р°РїРµС‡Р°С‚Р»РµР»Р° РµС‘ СѓРїСЂСѓРіСѓСЋ РїРѕРїСѓ, Р·Р°С‚РµРј РЅР°РєР»РѕРЅРёР»Р°СЃСЊ РІРїРµСЂС‘Рґ Рё СЃРІРµР»Р° РїР»РµС‡Рё РІРјРµСЃС‚Рµ, С‡С‚РѕР±С‹ РїРѕРґС‡РµСЂРєРЅСѓС‚СЊ РіСЂСѓРґСЊ. РћРЅР° РјРµРґР»РµРЅРЅРѕ РѕС‚РєСЂС‹Р»Р° РґРІРµСЂСЊ Рё РЅР°РїСЂР°РІРёР»Р° РєР°РјРµСЂСѓ РЅР° РљРёСЂСЃС‚РµРЅ. Р•С‘ Р»РёС†Рѕ Р±С‹Р»Рѕ РєСЂР°СЃРЅС‹Рј, Рё РѕРЅР° Р±С‹Р»Р° РїРѕС‡С‚Рё РІ СЃР»РµР·Р°С…, СЃРѕРіРЅСѓРІС€РёСЃСЊ РїРѕРїРѕР»Р°Рј РЅР° РїРѕР»Сѓ Рё РѕС‚С‡Р°СЏРЅРЅРѕ С…РІР°С‚Р°СЏСЃСЊ Р·Р° СЃРµР±СЏ.
 
-«Привет, ребята, — обратилась она к своим пятидесяти тысячам подписчиков в Instagram, — мои сводные сёстры такая маленькая девочка, что даже пару часов не может сдержать свою мочу».
+В«РџСЂРёРІРµС‚, СЂРµР±СЏС‚Р°, вЂ” РѕР±СЂР°С‚РёР»Р°СЃСЊ РѕРЅР° Рє СЃРІРѕРёРј РїСЏС‚РёРґРµСЃСЏС‚Рё С‚С‹СЃСЏС‡Р°Рј РїРѕРґРїРёСЃС‡РёРєРѕРІ РІ Instagram, вЂ” РјРѕРё СЃРІРѕРґРЅС‹Рµ СЃС‘СЃС‚СЂС‹ С‚Р°РєР°СЏ РјР°Р»РµРЅСЊРєР°СЏ РґРµРІРѕС‡РєР°, С‡С‚Рѕ РґР°Р¶Рµ РїР°СЂСѓ С‡Р°СЃРѕРІ РЅРµ РјРѕР¶РµС‚ СЃРґРµСЂР¶Р°С‚СЊ СЃРІРѕСЋ РјРѕС‡СѓВ».
 
-Мэдди стояла между Кирестен и входом в в*нную. Кирстен всё ещё стояла на коленях, не в силах дать отпор, потому что не могла убрать руки с их места между бёдрами. Мэдди рассмеялась и мягко поставила пятку на живот Кирстен. Паника наполнила глаза Кирстен. Мэдди медленно увеличивала давление, пока Кирстен не начала увядать под ней.
+РњСЌРґРґРё СЃС‚РѕСЏР»Р° РјРµР¶РґСѓ РљРёСЂРµСЃС‚РµРЅ Рё РІС…РѕРґРѕРј РІ РІ*РЅРЅСѓСЋ. РљРёСЂСЃС‚РµРЅ РІСЃС‘ РµС‰С‘ СЃС‚РѕСЏР»Р° РЅР° РєРѕР»РµРЅСЏС…, РЅРµ РІ СЃРёР»Р°С… РґР°С‚СЊ РѕС‚РїРѕСЂ, РїРѕС‚РѕРјСѓ С‡С‚Рѕ РЅРµ РјРѕРіР»Р° СѓР±СЂР°С‚СЊ СЂСѓРєРё СЃ РёС… РјРµСЃС‚Р° РјРµР¶РґСѓ Р±С‘РґСЂР°РјРё. РњСЌРґРґРё СЂР°СЃСЃРјРµСЏР»Р°СЃСЊ Рё РјСЏРіРєРѕ РїРѕСЃС‚Р°РІРёР»Р° РїСЏС‚РєСѓ РЅР° Р¶РёРІРѕС‚ РљРёСЂСЃС‚РµРЅ. РџР°РЅРёРєР° РЅР°РїРѕР»РЅРёР»Р° РіР»Р°Р·Р° РљРёСЂСЃС‚РµРЅ. РњСЌРґРґРё РјРµРґР»РµРЅРЅРѕ СѓРІРµР»РёС‡РёРІР°Р»Р° РґР°РІР»РµРЅРёРµ, РїРѕРєР° РљРёСЂСЃС‚РµРЅ РЅРµ РЅР°С‡Р°Р»Р° СѓРІСЏРґР°С‚СЊ РїРѕРґ РЅРµР№.
 
-«О Боже, — всхлипнула Кирстен, — это выходит наружу».
+В«Рћ Р‘РѕР¶Рµ, вЂ” РІСЃС…Р»РёРїРЅСѓР»Р° РљРёСЂСЃС‚РµРЅ, вЂ” СЌС‚Рѕ РІС‹С…РѕРґРёС‚ РЅР°СЂСѓР¶СѓВ».
 
-Посигналила машина, и Мэдди выглянула в окно, заметив машину своего парня.
+РџРѕСЃРёРіРЅР°Р»РёР»Р° РјР°С€РёРЅР°, Рё РњСЌРґРґРё РІС‹РіР»СЏРЅСѓР»Р° РІ РѕРєРЅРѕ, Р·Р°РјРµС‚РёРІ РјР°С€РёРЅСѓ СЃРІРѕРµРіРѕ РїР°СЂРЅСЏ.
 
-«Ну что ж, — она поднесла камеру к своему лицу и улыбнулась жемчужно-белыми зубами, — пора идти».
+В«РќСѓ С‡С‚Рѕ Р¶, вЂ” РѕРЅР° РїРѕРґРЅРµСЃР»Р° РєР°РјРµСЂСѓ Рє СЃРІРѕРµРјСѓ Р»РёС†Сѓ Рё СѓР»С‹Р±РЅСѓР»Р°СЃСЊ Р¶РµРјС‡СѓР¶РЅРѕ-Р±РµР»С‹РјРё Р·СѓР±Р°РјРё, вЂ” РїРѕСЂР° РёРґС‚РёВ».
 
-Кирстен бросилась в в*нную, как только сводная сестра ушла с её пути. Она села на унитаз, и не успела она даже стянуть джинсы или нижнее бельё, как через них уже хлынула горячая струя мочи, полностью пропитав ткань. Кирстен закричала от удовольствия. Это было так приятно, что ей пришлось прислониться спиной к унитазу, и к тому времени, как она закончила, её ноги дёргались.
+РљРёСЂСЃС‚РµРЅ Р±СЂРѕСЃРёР»Р°СЃСЊ РІ РІ*РЅРЅСѓСЋ, РєР°Рє С‚РѕР»СЊРєРѕ СЃРІРѕРґРЅР°СЏ СЃРµСЃС‚СЂР° СѓС€Р»Р° СЃ РµС‘ РїСѓС‚Рё. РћРЅР° СЃРµР»Р° РЅР° СѓРЅРёС‚Р°Р·, Рё РЅРµ СѓСЃРїРµР»Р° РѕРЅР° РґР°Р¶Рµ СЃС‚СЏРЅСѓС‚СЊ РґР¶РёРЅСЃС‹ РёР»Рё РЅРёР¶РЅРµРµ Р±РµР»СЊС‘, РєР°Рє С‡РµСЂРµР· РЅРёС… СѓР¶Рµ С…Р»С‹РЅСѓР»Р° РіРѕСЂСЏС‡Р°СЏ СЃС‚СЂСѓСЏ РјРѕС‡Рё, РїРѕР»РЅРѕСЃС‚СЊСЋ РїСЂРѕРїРёС‚Р°РІ С‚РєР°РЅСЊ. РљРёСЂСЃС‚РµРЅ Р·Р°РєСЂРёС‡Р°Р»Р° РѕС‚ СѓРґРѕРІРѕР»СЊСЃС‚РІРёСЏ. Р­С‚Рѕ Р±С‹Р»Рѕ С‚Р°Рє РїСЂРёСЏС‚РЅРѕ, С‡С‚Рѕ РµР№ РїСЂРёС€Р»РѕСЃСЊ РїСЂРёСЃР»РѕРЅРёС‚СЊСЃСЏ СЃРїРёРЅРѕР№ Рє СѓРЅРёС‚Р°Р·Сѓ, Рё Рє С‚РѕРјСѓ РІСЂРµРјРµРЅРё, РєР°Рє РѕРЅР° Р·Р°РєРѕРЅС‡РёР»Р°, РµС‘ РЅРѕРіРё РґС‘СЂРіР°Р»РёСЃСЊ.
 
-Когда Кирстен, наконец, пришла в себя, она вытащила свой телефон и увидела видео, которое опубликовала Мэдди. Лицо Кирстен вспыхнуло от гнева. К концу ночи Мэдди пожалеет об этом видео, если Кирстен имеет к этому какое-то отношение.
+РљРѕРіРґР° РљРёСЂСЃС‚РµРЅ, РЅР°РєРѕРЅРµС†, РїСЂРёС€Р»Р° РІ СЃРµР±СЏ, РѕРЅР° РІС‹С‚Р°С‰РёР»Р° СЃРІРѕР№ С‚РµР»РµС„РѕРЅ Рё СѓРІРёРґРµР»Р° РІРёРґРµРѕ, РєРѕС‚РѕСЂРѕРµ РѕРїСѓР±Р»РёРєРѕРІР°Р»Р° РњСЌРґРґРё. Р›РёС†Рѕ РљРёСЂСЃС‚РµРЅ РІСЃРїС‹С…РЅСѓР»Рѕ РѕС‚ РіРЅРµРІР°. Рљ РєРѕРЅС†Сѓ РЅРѕС‡Рё РњСЌРґРґРё РїРѕР¶Р°Р»РµРµС‚ РѕР± СЌС‚РѕРј РІРёРґРµРѕ, РµСЃР»Рё РљРёСЂСЃС‚РµРЅ РёРјРµРµС‚ Рє СЌС‚РѕРјСѓ РєР°РєРѕРµ-С‚Рѕ РѕС‚РЅРѕС€РµРЅРёРµ.
 
 *001*2023-06-28 04:38
 
-ЧАСТЬ ВТОРАЯ
+Р§РђРЎРўР¬ Р’РўРћР РђРЇ
 
-После пяти кружек пива Мэдди стояла в очереди в туалет, когда ей позвонила мама.
+РџРѕСЃР»Рµ РїСЏС‚Рё РєСЂСѓР¶РµРє РїРёРІР° РњСЌРґРґРё СЃС‚РѕСЏР»Р° РІ РѕС‡РµСЂРµРґРё РІ С‚СѓР°Р»РµС‚, РєРѕРіРґР° РµР№ РїРѕР·РІРѕРЅРёР»Р° РјР°РјР°.
 
-«Мадлен!» — огрызнулась её мать. — Что, по-твоему, ты делаешь на вечеринке, когда тебя наказывают? Я посылаю Кирстен забрать тебя, и к твоему приезду я буду дома. Вы попали в такую беду, юная леди.
+В«РњР°РґР»РµРЅ!В» вЂ” РѕРіСЂС‹Р·РЅСѓР»Р°СЃСЊ РµС‘ РјР°С‚СЊ. вЂ” Р§С‚Рѕ, РїРѕ-С‚РІРѕРµРјСѓ, С‚С‹ РґРµР»Р°РµС€СЊ РЅР° РІРµС‡РµСЂРёРЅРєРµ, РєРѕРіРґР° С‚РµР±СЏ РЅР°РєР°Р·С‹РІР°СЋС‚? РЇ РїРѕСЃС‹Р»Р°СЋ РљРёСЂСЃС‚РµРЅ Р·Р°Р±СЂР°С‚СЊ С‚РµР±СЏ, Рё Рє С‚РІРѕРµРјСѓ РїСЂРёРµР·РґСѓ СЏ Р±СѓРґСѓ РґРѕРјР°. Р’С‹ РїРѕРїР°Р»Рё РІ С‚Р°РєСѓСЋ Р±РµРґСѓ, СЋРЅР°СЏ Р»РµРґРё.
 
-Мэдди закатила глаза и повесила трубку. Она вздохнула с облегчением, когда заметила, что пришла её очередь пользоваться туалетом. Она с желанием шаркала ногами взад-вперёд, но ещё не начала хвататься за себя, как Кирстен. Она не была маленькой девочкой. Когда Мэдди шагнула вперёд, Кирстен схватила её за руку.
+РњСЌРґРґРё Р·Р°РєР°С‚РёР»Р° РіР»Р°Р·Р° Рё РїРѕРІРµСЃРёР»Р° С‚СЂСѓР±РєСѓ. РћРЅР° РІР·РґРѕС…РЅСѓР»Р° СЃ РѕР±Р»РµРіС‡РµРЅРёРµРј, РєРѕРіРґР° Р·Р°РјРµС‚РёР»Р°, С‡С‚Рѕ РїСЂРёС€Р»Р° РµС‘ РѕС‡РµСЂРµРґСЊ РїРѕР»СЊР·РѕРІР°С‚СЊСЃСЏ С‚СѓР°Р»РµС‚РѕРј. РћРЅР° СЃ Р¶РµР»Р°РЅРёРµРј С€Р°СЂРєР°Р»Р° РЅРѕРіР°РјРё РІР·Р°Рґ-РІРїРµСЂС‘Рґ, РЅРѕ РµС‰С‘ РЅРµ РЅР°С‡Р°Р»Р° С…РІР°С‚Р°С‚СЊСЃСЏ Р·Р° СЃРµР±СЏ, РєР°Рє РљРёСЂСЃС‚РµРЅ. РћРЅР° РЅРµ Р±С‹Р»Р° РјР°Р»РµРЅСЊРєРѕР№ РґРµРІРѕС‡РєРѕР№. РљРѕРіРґР° РњСЌРґРґРё С€Р°РіРЅСѓР»Р° РІРїРµСЂС‘Рґ, РљРёСЂСЃС‚РµРЅ СЃС…РІР°С‚РёР»Р° РµС‘ Р·Р° СЂСѓРєСѓ.
 
-— Подожди, просто позволь мне идти первой, — сказала Мэдди более отчаянно, чем собиралась.
+вЂ” РџРѕРґРѕР¶РґРё, РїСЂРѕСЃС‚Рѕ РїРѕР·РІРѕР»СЊ РјРЅРµ РёРґС‚Рё РїРµСЂРІРѕР№, вЂ” СЃРєР°Р·Р°Р»Р° РњСЌРґРґРё Р±РѕР»РµРµ РѕС‚С‡Р°СЏРЅРЅРѕ, С‡РµРј СЃРѕР±РёСЂР°Р»Р°СЃСЊ.
 
-«Никаких шансов. Твои мамы получат мою задницу, если я не отвезу тебя домой прямо сейчас».
+В«РќРёРєР°РєРёС… С€Р°РЅСЃРѕРІ. РўРІРѕРё РјР°РјС‹ РїРѕР»СѓС‡Р°С‚ РјРѕСЋ Р·Р°РґРЅРёС†Сѓ, РµСЃР»Рё СЏ РЅРµ РѕС‚РІРµР·Сѓ С‚РµР±СЏ РґРѕРјРѕР№ РїСЂСЏРјРѕ СЃРµР№С‡Р°СЃВ».
 
-Их дом находился в тридцати минутах от вечеринки. Через десять минут после начала поездки Мэдди почувствовала, как тугая нить её белого бикини растягивается на её выпирающем животе. Бикини было слегка влажным, так как оно высохло после того, как она провела время в бассейне, и это было похоже на пытку против её ноющей *****. Она сжала руки в кулаки поверх юбки, не желая, чтобы Кирстен знала, как сильно ей нужно уйти. Сейчас она сожалела о том, что надела юбку, так как она впивалась в её чувствительный мочевой пузырь. Через пятнадцать минут после начала поездки Мэдди отбросила своё достоинство и сказала:
+РС… РґРѕРј РЅР°С…РѕРґРёР»СЃСЏ РІ С‚СЂРёРґС†Р°С‚Рё РјРёРЅСѓС‚Р°С… РѕС‚ РІРµС‡РµСЂРёРЅРєРё. Р§РµСЂРµР· РґРµСЃСЏС‚СЊ РјРёРЅСѓС‚ РїРѕСЃР»Рµ РЅР°С‡Р°Р»Р° РїРѕРµР·РґРєРё РњСЌРґРґРё РїРѕС‡СѓРІСЃС‚РІРѕРІР°Р»Р°, РєР°Рє С‚СѓРіР°СЏ РЅРёС‚СЊ РµС‘ Р±РµР»РѕРіРѕ Р±РёРєРёРЅРё СЂР°СЃС‚СЏРіРёРІР°РµС‚СЃСЏ РЅР° РµС‘ РІС‹РїРёСЂР°СЋС‰РµРј Р¶РёРІРѕС‚Рµ. Р‘РёРєРёРЅРё Р±С‹Р»Рѕ СЃР»РµРіРєР° РІР»Р°Р¶РЅС‹Рј, С‚Р°Рє РєР°Рє РѕРЅРѕ РІС‹СЃРѕС…Р»Рѕ РїРѕСЃР»Рµ С‚РѕРіРѕ, РєР°Рє РѕРЅР° РїСЂРѕРІРµР»Р° РІСЂРµРјСЏ РІ Р±Р°СЃСЃРµР№РЅРµ, Рё СЌС‚Рѕ Р±С‹Р»Рѕ РїРѕС…РѕР¶Рµ РЅР° РїС‹С‚РєСѓ РїСЂРѕС‚РёРІ РµС‘ РЅРѕСЋС‰РµР№ *****. РћРЅР° СЃР¶Р°Р»Р° СЂСѓРєРё РІ РєСѓР»Р°РєРё РїРѕРІРµСЂС… СЋР±РєРё, РЅРµ Р¶РµР»Р°СЏ, С‡С‚РѕР±С‹ РљРёСЂСЃС‚РµРЅ Р·РЅР°Р»Р°, РєР°Рє СЃРёР»СЊРЅРѕ РµР№ РЅСѓР¶РЅРѕ СѓР№С‚Рё. РЎРµР№С‡Р°СЃ РѕРЅР° СЃРѕР¶Р°Р»РµР»Р° Рѕ С‚РѕРј, С‡С‚Рѕ РЅР°РґРµР»Р° СЋР±РєСѓ, С‚Р°Рє РєР°Рє РѕРЅР° РІРїРёРІР°Р»Р°СЃСЊ РІ РµС‘ С‡СѓРІСЃС‚РІРёС‚РµР»СЊРЅС‹Р№ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ. Р§РµСЂРµР· РїСЏС‚РЅР°РґС†Р°С‚СЊ РјРёРЅСѓС‚ РїРѕСЃР»Рµ РЅР°С‡Р°Р»Р° РїРѕРµР·РґРєРё РњСЌРґРґРё РѕС‚Р±СЂРѕСЃРёР»Р° СЃРІРѕС‘ РґРѕСЃС‚РѕРёРЅСЃС‚РІРѕ Рё СЃРєР°Р·Р°Р»Р°:
 
-«Кирстен, если честно, мне никогда в жизни не приходилось так сильно мочиться. Можем ли мы остановиться?
+В«РљРёСЂСЃС‚РµРЅ, РµСЃР»Рё С‡РµСЃС‚РЅРѕ, РјРЅРµ РЅРёРєРѕРіРґР° РІ Р¶РёР·РЅРё РЅРµ РїСЂРёС…РѕРґРёР»РѕСЃСЊ С‚Р°Рє СЃРёР»СЊРЅРѕ РјРѕС‡РёС‚СЊСЃСЏ. РњРѕР¶РµРј Р»Рё РјС‹ РѕСЃС‚Р°РЅРѕРІРёС‚СЊСЃСЏ?
 
-Кирстен ухмыльнулась. Она немного ускорилась и врезалась в лежачего полицейского, заставив Мэдди задохнуться и сильнее вцепиться в свою юбку, так что она задралась, это был единственный способ, которым она могла удержать руки от полёта к своей заднице.
+РљРёСЂСЃС‚РµРЅ СѓС…РјС‹Р»СЊРЅСѓР»Р°СЃСЊ. РћРЅР° РЅРµРјРЅРѕРіРѕ СѓСЃРєРѕСЂРёР»Р°СЃСЊ Рё РІСЂРµР·Р°Р»Р°СЃСЊ РІ Р»РµР¶Р°С‡РµРіРѕ РїРѕР»РёС†РµР№СЃРєРѕРіРѕ, Р·Р°СЃС‚Р°РІРёРІ РњСЌРґРґРё Р·Р°РґРѕС…РЅСѓС‚СЊСЃСЏ Рё СЃРёР»СЊРЅРµРµ РІС†РµРїРёС‚СЊСЃСЏ РІ СЃРІРѕСЋ СЋР±РєСѓ, С‚Р°Рє С‡С‚Рѕ РѕРЅР° Р·Р°РґСЂР°Р»Р°СЃСЊ, СЌС‚Рѕ Р±С‹Р» РµРґРёРЅСЃС‚РІРµРЅРЅС‹Р№ СЃРїРѕСЃРѕР±, РєРѕС‚РѕСЂС‹Рј РѕРЅР° РјРѕРіР»Р° СѓРґРµСЂР¶Р°С‚СЊ СЂСѓРєРё РѕС‚ РїРѕР»С‘С‚Р° Рє СЃРІРѕРµР№ Р·Р°РґРЅРёС†Рµ.
 
-«Конечно, я могу где-то остановиться», — сказала Кирстен.
+В«РљРѕРЅРµС‡РЅРѕ, СЏ РјРѕРіСѓ РіРґРµ-С‚Рѕ РѕСЃС‚Р°РЅРѕРІРёС‚СЊСЃСЏВ», вЂ” СЃРєР°Р·Р°Р»Р° РљРёСЂСЃС‚РµРЅ.
 
-— О, слава богу, — вздохнула Мэдди, когда Кирстен подъехала к ближайшей остановке для отдыха. Близость облегчения усилила потребность Мэдди уйти, и она не могла удержаться от того, чтобы немного сесть на своё место. Её ноги тряслись к тому времени, когда они подъехали к парковочному месту, и рука Мэдди потянулась к ручке, пытаясь открыть дверь. От звука того, как Кирстен запирает дверь, Мэдди побежали мурашки по спине. Она могла видеть туалет из окна, и её тело кричало.
+вЂ” Рћ, СЃР»Р°РІР° Р±РѕРіСѓ, вЂ” РІР·РґРѕС…РЅСѓР»Р° РњСЌРґРґРё, РєРѕРіРґР° РљРёСЂСЃС‚РµРЅ РїРѕРґСЉРµС…Р°Р»Р° Рє Р±Р»РёР¶Р°Р№С€РµР№ РѕСЃС‚Р°РЅРѕРІРєРµ РґР»СЏ РѕС‚РґС‹С…Р°. Р‘Р»РёР·РѕСЃС‚СЊ РѕР±Р»РµРіС‡РµРЅРёСЏ СѓСЃРёР»РёР»Р° РїРѕС‚СЂРµР±РЅРѕСЃС‚СЊ РњСЌРґРґРё СѓР№С‚Рё, Рё РѕРЅР° РЅРµ РјРѕРіР»Р° СѓРґРµСЂР¶Р°С‚СЊСЃСЏ РѕС‚ С‚РѕРіРѕ, С‡С‚РѕР±С‹ РЅРµРјРЅРѕРіРѕ СЃРµСЃС‚СЊ РЅР° СЃРІРѕС‘ РјРµСЃС‚Рѕ. Р•С‘ РЅРѕРіРё С‚СЂСЏСЃР»РёСЃСЊ Рє С‚РѕРјСѓ РІСЂРµРјРµРЅРё, РєРѕРіРґР° РѕРЅРё РїРѕРґСЉРµС…Р°Р»Рё Рє РїР°СЂРєРѕРІРѕС‡РЅРѕРјСѓ РјРµСЃС‚Сѓ, Рё СЂСѓРєР° РњСЌРґРґРё РїРѕС‚СЏРЅСѓР»Р°СЃСЊ Рє СЂСѓС‡РєРµ, РїС‹С‚Р°СЏСЃСЊ РѕС‚РєСЂС‹С‚СЊ РґРІРµСЂСЊ. РћС‚ Р·РІСѓРєР° С‚РѕРіРѕ, РєР°Рє РљРёСЂСЃС‚РµРЅ Р·Р°РїРёСЂР°РµС‚ РґРІРµСЂСЊ, РњСЌРґРґРё РїРѕР±РµР¶Р°Р»Рё РјСѓСЂР°С€РєРё РїРѕ СЃРїРёРЅРµ. РћРЅР° РјРѕРіР»Р° РІРёРґРµС‚СЊ С‚СѓР°Р»РµС‚ РёР· РѕРєРЅР°, Рё РµС‘ С‚РµР»Рѕ РєСЂРёС‡Р°Р»Рѕ.
 
-«Я сказала, что остановлюсь, а не дала тебе попис*ть», — усмехнулась она. Кирстен наклонилась и положила руку на живот Мэдди. Обычно ровная кожа растянулась, и малейшее прикосновение руки Кирстен заставило ноги Мэдди сжаться вместе.
+В«РЇ СЃРєР°Р·Р°Р»Р°, С‡С‚Рѕ РѕСЃС‚Р°РЅРѕРІР»СЋСЃСЊ, Р° РЅРµ РґР°Р»Р° С‚РµР±Рµ РїРѕРїРёСЃ*С‚СЊВ», вЂ” СѓСЃРјРµС…РЅСѓР»Р°СЃСЊ РѕРЅР°. РљРёСЂСЃС‚РµРЅ РЅР°РєР»РѕРЅРёР»Р°СЃСЊ Рё РїРѕР»РѕР¶РёР»Р° СЂСѓРєСѓ РЅР° Р¶РёРІРѕС‚ РњСЌРґРґРё. РћР±С‹С‡РЅРѕ СЂРѕРІРЅР°СЏ РєРѕР¶Р° СЂР°СЃС‚СЏРЅСѓР»Р°СЃСЊ, Рё РјР°Р»РµР№С€РµРµ РїСЂРёРєРѕСЃРЅРѕРІРµРЅРёРµ СЂСѓРєРё РљРёСЂСЃС‚РµРЅ Р·Р°СЃС‚Р°РІРёР»Рѕ РЅРѕРіРё РњСЌРґРґРё СЃР¶Р°С‚СЊСЃСЏ РІРјРµСЃС‚Рµ.
 
-«Я собираюсь принести нам немного выпивки, и если я увижу, что ты хотя бы шагаешь внутрь этой заправки, я скажу твоей маме, что я обнаружил, что ты занимаешься сексом с твоим парнем, когда я приехал, чтобы забрать тебя», — проинструктировала она, грубо похлопав по округлившемуся мочевому пузырю Мэдди. Мэдди сглотнула, но сохранила самообладание, отказываясь показывать какие-либо признаки сильного отчаяния перед Кирстен.
+В«РЇ СЃРѕР±РёСЂР°СЋСЃСЊ РїСЂРёРЅРµСЃС‚Рё РЅР°Рј РЅРµРјРЅРѕРіРѕ РІС‹РїРёРІРєРё, Рё РµСЃР»Рё СЏ СѓРІРёР¶Сѓ, С‡С‚Рѕ С‚С‹ С…РѕС‚СЏ Р±С‹ С€Р°РіР°РµС€СЊ РІРЅСѓС‚СЂСЊ СЌС‚РѕР№ Р·Р°РїСЂР°РІРєРё, СЏ СЃРєР°Р¶Сѓ С‚РІРѕРµР№ РјР°РјРµ, С‡С‚Рѕ СЏ РѕР±РЅР°СЂСѓР¶РёР», С‡С‚Рѕ С‚С‹ Р·Р°РЅРёРјР°РµС€СЊСЃСЏ СЃРµРєСЃРѕРј СЃ С‚РІРѕРёРј РїР°СЂРЅРµРј, РєРѕРіРґР° СЏ РїСЂРёРµС…Р°Р», С‡С‚РѕР±С‹ Р·Р°Р±СЂР°С‚СЊ С‚РµР±СЏВ», вЂ” РїСЂРѕРёРЅСЃС‚СЂСѓРєС‚РёСЂРѕРІР°Р»Р° РѕРЅР°, РіСЂСѓР±Рѕ РїРѕС…Р»РѕРїР°РІ РїРѕ РѕРєСЂСѓРіР»РёРІС€РµРјСѓСЃСЏ РјРѕС‡РµРІРѕРјСѓ РїСѓР·С‹СЂСЋ РњСЌРґРґРё. РњСЌРґРґРё СЃРіР»РѕС‚РЅСѓР»Р°, РЅРѕ СЃРѕС…СЂР°РЅРёР»Р° СЃР°РјРѕРѕР±Р»Р°РґР°РЅРёРµ, РѕС‚РєР°Р·С‹РІР°СЏСЃСЊ РїРѕРєР°Р·С‹РІР°С‚СЊ РєР°РєРёРµ-Р»РёР±Рѕ РїСЂРёР·РЅР°РєРё СЃРёР»СЊРЅРѕРіРѕ РѕС‚С‡Р°СЏРЅРёСЏ РїРµСЂРµРґ РљРёСЂСЃС‚РµРЅ.
 
-Вторая Кирстен была вне поля зрения. Мэдди скрючилась, как крендель, слегка покачиваясь и позволяя одной слезинке выкатиться из глаз. Мэдди не была уверена, что сможет перестать сдерживать себя, когда вернётся Кирстен. Кирстен вернулась в машину с большим Icee. Мэдди мучительно двигала руками и сжимала мышцы мочевого пузыря. Всё её тело дрожало, когда она посмотрела на Кирстен с притворным отвращением.
+Р’С‚РѕСЂР°СЏ РљРёСЂСЃС‚РµРЅ Р±С‹Р»Р° РІРЅРµ РїРѕР»СЏ Р·СЂРµРЅРёСЏ. РњСЌРґРґРё СЃРєСЂСЋС‡РёР»Р°СЃСЊ, РєР°Рє РєСЂРµРЅРґРµР»СЊ, СЃР»РµРіРєР° РїРѕРєР°С‡РёРІР°СЏСЃСЊ Рё РїРѕР·РІРѕР»СЏСЏ РѕРґРЅРѕР№ СЃР»РµР·РёРЅРєРµ РІС‹РєР°С‚РёС‚СЊСЃСЏ РёР· РіР»Р°Р·. РњСЌРґРґРё РЅРµ Р±С‹Р»Р° СѓРІРµСЂРµРЅР°, С‡С‚Рѕ СЃРјРѕР¶РµС‚ РїРµСЂРµСЃС‚Р°С‚СЊ СЃРґРµСЂР¶РёРІР°С‚СЊ СЃРµР±СЏ, РєРѕРіРґР° РІРµСЂРЅС‘С‚СЃСЏ РљРёСЂСЃС‚РµРЅ. РљРёСЂСЃС‚РµРЅ РІРµСЂРЅСѓР»Р°СЃСЊ РІ РјР°С€РёРЅСѓ СЃ Р±РѕР»СЊС€РёРј Icee. РњСЌРґРґРё РјСѓС‡РёС‚РµР»СЊРЅРѕ РґРІРёРіР°Р»Р° СЂСѓРєР°РјРё Рё СЃР¶РёРјР°Р»Р° РјС‹С€С†С‹ РјРѕС‡РµРІРѕРіРѕ РїСѓР·С‹СЂСЏ. Р’СЃС‘ РµС‘ С‚РµР»Рѕ РґСЂРѕР¶Р°Р»Рѕ, РєРѕРіРґР° РѕРЅР° РїРѕСЃРјРѕС‚СЂРµР»Р° РЅР° РљРёСЂСЃС‚РµРЅ СЃ РїСЂРёС‚РІРѕСЂРЅС‹Рј РѕС‚РІСЂР°С‰РµРЅРёРµРј.
 
-«Ты станешь ещё толще, если будешь пить эти штуки», — сказала она.
+В«РўС‹ СЃС‚Р°РЅРµС€СЊ РµС‰С‘ С‚РѕР»С‰Рµ, РµСЃР»Рё Р±СѓРґРµС€СЊ РїРёС‚СЊ СЌС‚Рё С€С‚СѓРєРёВ», вЂ” СЃРєР°Р·Р°Р»Р° РѕРЅР°.
 
-Глаза Кирстен загорелись.
+Р“Р»Р°Р·Р° РљРёСЂСЃС‚РµРЅ Р·Р°РіРѕСЂРµР»РёСЃСЊ.
 
-— О, я не пью, а ты.
+вЂ” Рћ, СЏ РЅРµ РїСЊСЋ, Р° С‚С‹.
 
-«Не могу! Я уже лопну!» Мэдди заплакала.
+В«РќРµ РјРѕРіСѓ! РЇ СѓР¶Рµ Р»РѕРїРЅСѓ!В» РњСЌРґРґРё Р·Р°РїР»Р°РєР°Р»Р°.
 
-«Ну, я не заведу эту машину, пока ты не выпьешь её целиком. Кроме того, это не должно быть так сложно. Ведь ты большая девочка. Твой мочевой пузырь намного сильнее моего. На самом деле, мне пришлось попис*ть, пока я был внутри, и это было ооочень приятно».
+В«РќСѓ, СЏ РЅРµ Р·Р°РІРµРґСѓ СЌС‚Сѓ РјР°С€РёРЅСѓ, РїРѕРєР° С‚С‹ РЅРµ РІС‹РїСЊРµС€СЊ РµС‘ С†РµР»РёРєРѕРј. РљСЂРѕРјРµ С‚РѕРіРѕ, СЌС‚Рѕ РЅРµ РґРѕР»Р¶РЅРѕ Р±С‹С‚СЊ С‚Р°Рє СЃР»РѕР¶РЅРѕ. Р’РµРґСЊ С‚С‹ Р±РѕР»СЊС€Р°СЏ РґРµРІРѕС‡РєР°. РўРІРѕР№ РјРѕС‡РµРІРѕР№ РїСѓР·С‹СЂСЊ РЅР°РјРЅРѕРіРѕ СЃРёР»СЊРЅРµРµ РјРѕРµРіРѕ. РќР° СЃР°РјРѕРј РґРµР»Рµ, РјРЅРµ РїСЂРёС€Р»РѕСЃСЊ РїРѕРїРёСЃ*С‚СЊ, РїРѕРєР° СЏ Р±С‹Р» РІРЅСѓС‚СЂРё, Рё СЌС‚Рѕ Р±С‹Р»Рѕ РѕРѕРѕС‡РµРЅСЊ РїСЂРёСЏС‚РЅРѕВ».
 
-Мэдди фыркнула и взяла напиток, выпив его менее чем за три минуты. Кирстен проверила чашку, затем кивнула и завела машину. Когда они были в десяти минутах ходьбы от дома, Мэдди почувствовала, как напиток начал ударять по её мочевому пузырю. Она отодвинула свои плавки от бикини и вдавила пятки в свою голую задницу так сильно, как только могла, чтобы Кирстен не заметила. Она снова начала качаться. Когда они прибыли в свой дом, Мэдди бросилась внутрь, прежде чем Кирстен смогла её остановить.
+РњСЌРґРґРё С„С‹СЂРєРЅСѓР»Р° Рё РІР·СЏР»Р° РЅР°РїРёС‚РѕРє, РІС‹РїРёРІ РµРіРѕ РјРµРЅРµРµ С‡РµРј Р·Р° С‚СЂРё РјРёРЅСѓС‚С‹. РљРёСЂСЃС‚РµРЅ РїСЂРѕРІРµСЂРёР»Р° С‡Р°С€РєСѓ, Р·Р°С‚РµРј РєРёРІРЅСѓР»Р° Рё Р·Р°РІРµР»Р° РјР°С€РёРЅСѓ. РљРѕРіРґР° РѕРЅРё Р±С‹Р»Рё РІ РґРµСЃСЏС‚Рё РјРёРЅСѓС‚Р°С… С…РѕРґСЊР±С‹ РѕС‚ РґРѕРјР°, РњСЌРґРґРё РїРѕС‡СѓРІСЃС‚РІРѕРІР°Р»Р°, РєР°Рє РЅР°РїРёС‚РѕРє РЅР°С‡Р°Р» СѓРґР°СЂСЏС‚СЊ РїРѕ РµС‘ РјРѕС‡РµРІРѕРјСѓ РїСѓР·С‹СЂСЋ. РћРЅР° РѕС‚РѕРґРІРёРЅСѓР»Р° СЃРІРѕРё РїР»Р°РІРєРё РѕС‚ Р±РёРєРёРЅРё Рё РІРґР°РІРёР»Р° РїСЏС‚РєРё РІ СЃРІРѕСЋ РіРѕР»СѓСЋ Р·Р°РґРЅРёС†Сѓ С‚Р°Рє СЃРёР»СЊРЅРѕ, РєР°Рє С‚РѕР»СЊРєРѕ РјРѕРіР»Р°, С‡С‚РѕР±С‹ РљРёСЂСЃС‚РµРЅ РЅРµ Р·Р°РјРµС‚РёР»Р°. РћРЅР° СЃРЅРѕРІР° РЅР°С‡Р°Р»Р° РєР°С‡Р°С‚СЊСЃСЏ. РљРѕРіРґР° РѕРЅРё РїСЂРёР±С‹Р»Рё РІ СЃРІРѕР№ РґРѕРј, РњСЌРґРґРё Р±СЂРѕСЃРёР»Р°СЃСЊ РІРЅСѓС‚СЂСЊ, РїСЂРµР¶РґРµ С‡РµРј РљРёСЂСЃС‚РµРЅ СЃРјРѕРіР»Р° РµС‘ РѕСЃС‚Р°РЅРѕРІРёС‚СЊ.
 
-«Прошу прощения? Куда ты направляешься?» — спросила мама Мэдди из-за кухонного стола.
+В«РџСЂРѕС€Сѓ РїСЂРѕС‰РµРЅРёСЏ? РљСѓРґР° С‚С‹ РЅР°РїСЂР°РІР»СЏРµС€СЊСЃСЏ?В» вЂ” СЃРїСЂРѕСЃРёР»Р° РјР°РјР° РњСЌРґРґРё РёР·-Р·Р° РєСѓС…РѕРЅРЅРѕРіРѕ СЃС‚РѕР»Р°.
 
-Мэдди побежала в в*нную. Ну, на самом деле, она ковыляла так быстро, как только могла, зажав кулаки между ног.
+РњСЌРґРґРё РїРѕР±РµР¶Р°Р»Р° РІ РІ*РЅРЅСѓСЋ. РќСѓ, РЅР° СЃР°РјРѕРј РґРµР»Рµ, РѕРЅР° РєРѕРІС‹Р»СЏР»Р° С‚Р°Рє Р±С‹СЃС‚СЂРѕ, РєР°Рє С‚РѕР»СЊРєРѕ РјРѕРіР»Р°, Р·Р°Р¶Р°РІ РєСѓР»Р°РєРё РјРµР¶РґСѓ РЅРѕРі.
 
-— Ванная, — поспешно выдохнула Мэдди. Она схватилась за ручку двери, но обнаружила, что она не поддаётся.
+вЂ” Р’Р°РЅРЅР°СЏ, вЂ” РїРѕСЃРїРµС€РЅРѕ РІС‹РґРѕС…РЅСѓР»Р° РњСЌРґРґРё. РћРЅР° СЃС…РІР°С‚РёР»Р°СЃСЊ Р·Р° СЂСѓС‡РєСѓ РґРІРµСЂРё, РЅРѕ РѕР±РЅР°СЂСѓР¶РёР»Р°, С‡С‚Рѕ РѕРЅР° РЅРµ РїРѕРґРґР°С‘С‚СЃСЏ.
 
-«Мадлен! Иди сюда сию же минуту. Мне нужно с тобой поболтать».
+В«РњР°РґР»РµРЅ! РРґРё СЃСЋРґР° СЃРёСЋ Р¶Рµ РјРёРЅСѓС‚Сѓ. РњРЅРµ РЅСѓР¶РЅРѕ СЃ С‚РѕР±РѕР№ РїРѕР±РѕР»С‚Р°С‚СЊВ».
 
-«О-о-о, но мама, нельзя я сначала пописаю».
+В«Рћ-Рѕ-Рѕ, РЅРѕ РјР°РјР°, РЅРµР»СЊР·СЏ СЏ СЃРЅР°С‡Р°Р»Р° РїРѕРїРёСЃР°СЋВ».
 
-Мама Мэдди подняла бровь.
+РњР°РјР° РњСЌРґРґРё РїРѕРґРЅСЏР»Р° Р±СЂРѕРІСЊ.
 
-— Ну, вообще-то, это часть твоего наказания. Алкоголь — это естественное мочегонное средство, а ты не должен был ничего пить сегодня вечером, так что я буду вести себя так, как будто ты этого не делал. До тех пор, пока я так не скажу, юная леди, вам не будут платить за туалет.
+вЂ” РќСѓ, РІРѕРѕР±С‰Рµ-С‚Рѕ, СЌС‚Рѕ С‡Р°СЃС‚СЊ С‚РІРѕРµРіРѕ РЅР°РєР°Р·Р°РЅРёСЏ. РђР»РєРѕРіРѕР»СЊ вЂ” СЌС‚Рѕ РµСЃС‚РµСЃС‚РІРµРЅРЅРѕРµ РјРѕС‡РµРіРѕРЅРЅРѕРµ СЃСЂРµРґСЃС‚РІРѕ, Р° С‚С‹ РЅРµ РґРѕР»Р¶РµРЅ Р±С‹Р» РЅРёС‡РµРіРѕ РїРёС‚СЊ СЃРµРіРѕРґРЅСЏ РІРµС‡РµСЂРѕРј, С‚Р°Рє С‡С‚Рѕ СЏ Р±СѓРґСѓ РІРµСЃС‚Рё СЃРµР±СЏ С‚Р°Рє, РєР°Рє Р±СѓРґС‚Рѕ С‚С‹ СЌС‚РѕРіРѕ РЅРµ РґРµР»Р°Р». Р”Рѕ С‚РµС… РїРѕСЂ, РїРѕРєР° СЏ С‚Р°Рє РЅРµ СЃРєР°Р¶Сѓ, СЋРЅР°СЏ Р»РµРґРё, РІР°Рј РЅРµ Р±СѓРґСѓС‚ РїР»Р°С‚РёС‚СЊ Р·Р° С‚СѓР°Р»РµС‚.
 
